--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -35,6 +35,10 @@ bind -r C-j resize-pane -D 5
 bind -r C-h resize-pane -L 5
 bind -r C-l resize-pane -R 5
 
+# Alacritty scrolling
+set -g mouse on
+set -ga terminal-overrides ',*256color*:smcup@:rmcup@'
+
 #### basic settings
 
 set-option -g status-justify "left"
