--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -17,8 +17,8 @@ family = "Hack Nerd Font"
 style = "Regular"
 
 [font.offset]
-x = 0
-y = 1
+x = 1
+y = 0
 
 [scrolling]
 # auto_scroll = true
@@ -30,6 +30,10 @@ multiplier = 20
 decorations = "buttonless"
 dynamic_padding = false
 opacity = 0.9
+
+[window.dimensions]
+columns = 240
+lines = 90
 
 [window.padding]
 x = 5
