--- a/.config/tmux/statusline.conf
+++ b/.config/tmux/statusline.conf
@@ -1,19 +1,19 @@
 # vim: ft=tmux
-set -g mode-style "fg=#eee8d5,bg=#073642"
+set -g mode-style "fg=#DCD7BA,bg=#16161D"
 
-set -g message-style "fg=#eee8d5,bg=#073642"
-set -g message-command-style "fg=#eee8d5,bg=#073642"
+set -g message-style "fg=#E82424,bg=#1F1F28"
+set -g message-command-style "fg=#DCD7BA,bg=#1F1F28"
 
-set -g pane-border-style "fg=#073642"
-set -g pane-active-border-style "fg=#eee8d5"
+set -g pane-border-style "fg=#54546D"
+set -g pane-active-border-style "fg=#7E9CD8"
 
 set -g status "on"
 set -g status-interval 1
 set -g status-justify "left"
 
-set -g status-style "fg=#586e75,bg=#073642"
+set -g status-style "fg=#727169,bg=#1F1F28"
 
-set -g status-bg "#002b36"
+set -g status-bg "#1F1F28"
 
 set -g status-left-length "100"
 set -g status-right-length "100"
@@ -21,11 +21,11 @@ set -g status-right-length "100"
 set -g status-left-style NONE
 set -g status-right-style NONE
 
-set -g status-left "#[fg=#073642,bg=#eee8d5,bold] #S #[fg=#eee8d5,bg=#93a1a1,nobold,nounderscore,noitalics]#[fg=#15161E,bg=#93a1a1,bold] #(whoami) #[fg=#93a1a1,bg=#002b36]"
-set -g status-right "#[fg=#586e75,bg=#002b36,nobold,nounderscore,noitalics]#[fg=#93a1a1,bg=#586e75]#[fg=#657b83,bg=#586e75,nobold,nounderscore,noitalics]#[fg=#93a1a1,bg=#657b83]#[fg=#93a1a1,bg=#657b83,nobold,nounderscore,noitalics]#[fg=#15161E,bg=#93a1a1,bold] #h "
+set -g status-left "#[fg=#16161D,bg=#C0A36E,bold] #S #[fg=#C0A36E,bg=#2A2A37,nobold]#[fg=#DCD7BA,bg=#2A2A37,bold] #(whoami) #[fg=#2A2A37,bg=#1F1F28]"
+set -g status-right "#[fg=#54546D,bg=#1F1F28]#[fg=#DCD7BA,bg=#54546D]#[fg=#727169,bg=#54546D]#[fg=#DCD7BA,bg=#727169]#[fg=#7E9CD8,bg=#727169]#[fg=#1F1F28,bg=#7E9CD8,bold] #h "
 
 setw -g window-status-activity-style "underscore,fg=#839496,bg=#002b36"
 setw -g window-status-separator ""
 setw -g window-status-style "NONE,fg=#839496,bg=#002b36"
-setw -g window-status-format '#[fg=#002b36,bg=#002b36]#[default] #I  #{b:pane_current_path} #[fg=#002b36,bg=#002b36,nobold,nounderscore,noitalics]'
-setw -g window-status-current-format '#[fg=#002b36,bg=#eee8d5]#[fg=#b58900,bg=#eee8d5] #I #[fg=#eee8d5,bg=#b58900] #{b:pane_current_path} #[fg=#b58900,bg=#002b36,nobold]'
+setw -g window-status-format '#[fg=#1F1F28,bg=#1F1F28]#[default] #I  #{b:pane_current_path} #[fg=#1F1F28,bg=#1F1F28]'
+setw -g window-status-current-format '#[fg=#1F1F28,bg=#C0A36E]#[fg=#1F1F28,bg=#C0A36E] #I #[fg=#C0A36E,bg=#1F1F28] #{b:pane_current_path} #[fg=#1F1F28,bg=#1F1F28]'
