--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,5 +1,5 @@
-import = ["~/.config/alacritty/themes/solarized_dark.toml"]
-
+[general]
+import = ["~/.config/alacritty/themes/kanagawa.toml"]
 live_config_reload = true
 
 [colors.cursor]
@@ -10,10 +10,10 @@ text = "#002b36"
 TERM = "xterm-256color"
 
 [font]
-size = 12.0
+size = 13.0
 
 [font.normal]
-family = "Hack Nerd Font"
+family = "Hack Nerd Font Propo"
 style = "Regular"
 
 [font.offset]
@@ -32,9 +32,13 @@ dynamic_padding = false
 opacity = 0.9
 
 [window.dimensions]
-columns = 240
-lines = 90
+# columns = 120
+# lines = 30
 
 [window.padding]
 x = 5
 y = 5
+
+[terminal.shell]
+program = "/opt/homebrew/bin/fish"
+args = ["-c", "tmux -u new -A -s main"]
