--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,7 +1,7 @@
-#set -g default-terminal "tmux-256color"
-set -g default-terminal "xterm-256color"
-#set-option -g default-terminal "screen-256color"
-#set -ga terminal-overrides ",*256col*:Tc"
+# set -g default-terminal "tmux-256color"
+# set -g default-terminal "xterm-256color"
+set-option -g default-terminal "screen-256color"
+# set -ga terminal-overrides ",*256col*:Tc"
 set -ga terminal-overrides ",xterm-256color:Tc"
 # action key
 # unbind C-b
@@ -13,7 +13,7 @@ set-option -g focus-events on
 
 set-window-option -g mode-keys vi
 
-#bind t send-key C-t
+# bind t send-key C-t
 # Reload settings
 bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
 # Open current directory
@@ -43,10 +43,10 @@ set -ga terminal-overrides ',*256color*:smcup@:rmcup@'
 #### basic settings
 
 set-option -g status-justify "left"
-#set-option utf8-default on
-#set-option -g mouse-select-pane
+# set-option utf8-default on
+# set-option -g mouse-select-pane
 set-window-option -g mode-keys vi
-#set-window-option -g utf8 on
+# set-window-option -g utf8 on
 # look'n feel
 set-option -g status-fg cyan
 set-option -g status-bg black
