--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,93 +1,150 @@
-# set -g default-terminal "tmux-256color"
-# set -g default-terminal "xterm-256color"
-set-option -g default-terminal "screen-256color"
-# set -ga terminal-overrides ",*256col*:Tc"
-set -ga terminal-overrides ",xterm-256color:Tc"
-# action key
-# unbind C-b
-# set-option -g prefix C-t
-set-option -g repeat-time 0
-set-option -g focus-events on
+# ╭──────────────────────────────────────────────────────────╮
+# │                         Plugins                          │
+# ╰──────────────────────────────────────────────────────────╯
 
-#### Key bindings
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+# set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
 
-set-window-option -g mode-keys vi
+set -g @plugin 'fcsonline/tmux-thumbs'
+run-shell ~/.config/tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
+set -g @thumbs-position off_left
+set -g @thumbs-osc52 0 # so you don't get a blank page
+set -g @thumbs-command 'tmux set-buffer -w "{}"'
+set -g @thumbs-upcase-command 'tmux set-buffer -w "{}" && tmux paste-buffer'
+set -g @thumbs-fg-color '#11111b'
+set -g @thumbs-bg-color '#f5e0dc'
+set -g @thumbs-hint-fg-color '#d20f39'
+set -g @thumbs-hint-bg-color '#f5e0dc'
+set -g @thumbs-regexp-1 'KEY: \S+\s+([^\s;]+);'
+set -g @thumbs-regexp-2 '(\S+\.pdf)'
 
-# bind t send-key C-t
-# Reload settings
-bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
-# Open current directory
-bind o run-shell "open #{pane_current_path}"
-bind -r e kill-pane -a
+run '~/.config/tmux/plugins/tpm/tpm'
 
-# vim-like pane switching
-bind -r k select-pane -U 
-bind -r j select-pane -D 
-bind -r h select-pane -L 
-bind -r l select-pane -R 
+# Themes
+set-option -g status-position bottom
 
-# Moving window
-bind-key -n C-S-Left swap-window -t -1 \; previous-window
-bind-key -n C-S-Right swap-window -t +1 \; next-window
+set -g status-bg '#1e1e2e'
+set -g status-fg '#cdd6f4'
 
-# Resizing pane
-bind -r C-k resize-pane -U 5
-bind -r C-j resize-pane -D 5
-bind -r C-h resize-pane -L 5
-bind -r C-l resize-pane -R 5
+set-option -g status-left ' '
+set-option -g status-left-length 0
 
-# Alacritty scrolling
+set -g @host_short "#(echo #{host} | cut -d'.' -f1)"
+set -g status-right '\
+#{cpu_fg_color} 󰻠 #{cpu_percentage}\
+ \
+#{ram_fg_color} 󰍛 #{ram_percentage}\
+#{?#{==:#{gpu_percentage},No GPU},, #{gpu_fg_color}  #{gpu_percentage}}#[default]\
+ - \
+#{host_short}\
+'
+
+set -g pane-border-style 'fg=#45475a'
+set -g pane-active-border-style 'fg=#f9e2af'
+
+set -g window-status-style 'fg=#585b70'
+set -g window-status-current-style 'fg=#f9e2af'
+
+set -g window-status-format '\
+#{?#{==:#{window_index},1},󰬺,#{?#{==:#{window_index},2},󰬻,#{?#{==:#{window_index},3},󰬼,#{?#{==:#{window_index},4},󰬽,#{?#{==:#{window_index},5},󰬾,#{?#{==:#{window_index},6},󰬿,#{?#{==:#{window_index},7},󰭀,#{?#{==:#{window_index},8},󰭁,#{?#{==:#{window_index},9},󰭂,󰿩}}}}}}}}}\
+#W\
+#{?window_zoomed_flag, 󰁌 , }\
+'
+set -g window-status-current-format '\
+#{?#{==:#{window_index},1},1 ,#{?#{==:#{window_index},2},2 ,#{?#{==:#{window_index},3},3 ,#{?#{==:#{window_index},4},4 ,#{?#{==:#{window_index},5},5 ,#{?#{==:#{window_index},6},6 ,#{?#{==:#{window_index},7},7 ,#{?#{==:#{window_index},8},8 ,#{?#{==:#{window_index},9},9 ,10 }}}}}}}}}\
+#W\
+#{?window_zoomed_flag, 󰁌 , }\
+'
+
+# ╭──────────────────────────────────────────────────────────╮
+# │                         Options                          │
+# ╰──────────────────────────────────────────────────────────╯
+
+# Set true color
+# set-option -sa terminal-overrides ",xterm*:Tc"
+# set-option -sa terminal-features ',xterm-kitty:RGB'
+
+set -g cursor-style bar
 set -g mouse on
-set -ga terminal-overrides ',*256color*:smcup@:rmcup@'
-
-#### basic settings
-
-set-option -g status-justify "left"
-# set-option utf8-default on
-# set-option -g mouse-select-pane
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
 set-window-option -g mode-keys vi
-# set-window-option -g utf8 on
-# look'n feel
-set-option -g status-fg cyan
-set-option -g status-bg black
-set -g pane-active-border-style fg=colour166,bg=default
-set -g window-style fg=colour10,bg=default
-set -g window-active-style fg=colour12,bg=default
-set-option -g history-limit 64096
+set-option -g allow-rename on
+set -sg escape-time 0 # more fluent escape key
+set -sg repeat-time 0 # more responsive pane switching
 
-set -sg escape-time 10
+# yazi
+# set -g allow-passthrough on
+# set -ga update-environment TERM
+# set -ga update-environment TERM_PROGRAM
 
-#### COLOUR
+# ╭──────────────────────────────────────────────────────────╮
+# │                       Keybindings                        │
+# ╰──────────────────────────────────────────────────────────╯
 
-# default statusbar colors
-set-option -g status-style bg=colour235,fg=colour136,default
+# Set prefix
+# unbind C-b
+# set -g prefix C-Space
+# bind C-Space send-prefix
 
-# default window title colors
-set-window-option -g window-status-style fg=colour244,bg=colour234,dim
+# Smart pane switching with Ctrl + hjkl
+bind -n C-h select-pane -L
+bind -n C-j select-pane -D
+bind -n C-k select-pane -U
+bind -n C-l select-pane -R
+# Shift Alt vim keys to switch windows
+# bind -n M-H previous-window
+# bind -n M-L next-window
+# bind -n M-S choose-tree -Zs
+# bind -n M-W choose-tree
 
-# active window title colors
-set-window-option -g window-status-current-style fg=colour166,bg=default,bright
+bind -n M-O next-layout
 
-# pane border
-set-option -g pane-border-style fg=colour235 #base02
-set-option -g pane-active-border-style fg=colour136,bg=colour235
+# Visual mode
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
-# message text
-set-option -g message-style bg=colour235,fg=colour166
+# Open panes in current directory
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
 
-# pane number display
-set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour166 #orange
+# Open new window in current directory
+# bind c new-window -c "#{pane_current_path}"
+bind c new-window -c ~
 
-# clock
-set-window-option -g clock-mode-colour colour64 #green
+# Break and rejoin panes
+bind B break-pane
 
-# allow the title bar to adapt to whatever host you connect to
-set -g set-titles on
-set -g set-titles-string "#T"
+# Resize panes
+bind -n S-Up    resize-pane -U 5
+bind -n S-Down  resize-pane -D 5
+bind -n S-Left  resize-pane -L 5
+bind -n S-Right resize-pane -R 5
 
-# import
-if-shell "uname -s | grep -q Darwin" "source ~/.config/tmux/macos.conf"
+# Clear scrollback buffer
+bind K send-keys "clear"\; send-keys "Enter"\; clear-history
 
-source ~/.config/tmux/statusline.conf
-source ~/.config/tmux/utility.conf
+# Reload tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf \; display-message "~/.config/tmux/tmux.conf reloaded."
+bind s choose-tree -swZ
+bind w choose-tree -wZ
+
+bind -n M-S-Left swap-window -t -1\; select-window -t -1
+bind -n M-S-Right swap-window -t +1\; select-window -t +1
+
+# go to last prompt
+bind-key b copy-mode\;\
+           send-keys -X start-of-line\;\
+           send-keys -X search-backward "❯"
+
+# new pane following bsp layout
+bind i run "[[ $(($(tmux display -p '8*#{pane_width}-20*#{pane_height}'))) -lt 0 ]] && tmux splitw -v -c '#{pane_current_path}' || tmux splitw -h -c '#{pane_current_path}'"
+
+run-shell ~/.config/tmux/plugins/tmux-cpu/cpu.tmux
